[project]
name = "hexlet-code"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dj-database-url>=3.0.1",
    "django==5.2.4",
    "django-bootstrap5>=25.2",
    "django-extensions>=4.1",
    "django-filter>=25.2",
    "gunicorn>=23.0.0",
    "ipython>=9.6.0",
    "psycopg2-binary>=2.9.10",
    "python-dotenv>=1.1.1",
    "rollbar>=1.3.0",
]

[dependency-groups]
dev = [
    "ruff>=0.14.3",
]
